# BenchAI1

./: .editorconfig  .gitignore  README.md  astro.config.mjs  package.json  tailwind.config.mjs
.github/workflows/: daily-sync-aa-llm.yml  daily-sync-swe.yml  sync-tau.yml
agent/: aa_data.json  generate_bench.py  hunter.py  publisher_info.py  pyproject.toml  sync_aa_data.py  sync_swe_data.py  sync_tau_data.py  test.py
pipeline/: models.py  modifyName.py  pyproject.toml  sync_aa_data.py  sync_swe_data.py  sync_tau_data.py  test_write.py
src/: consts.ts
src/components/: BenchmarkCard.tsx  BenchmarkExplorer.tsx  LeaderboardChart.tsx  ModelComparator.tsx  ModelFilterableList.tsx  ModelRadarChart.tsx  PublisherModelList.tsx
src/constants/: publishers.ts
src/content/: config.ts
src/content/benchmark-docs/: aime_25.md  artificial_analysis_coding_index.md  artificial_analysis_intelligence_index.md  gpqa.md  hle.md  ifbench.md  lcr.md  livecodebench.md  math_500.md  mmlu_pro.md  scicode.md  swe_bash_only.md  tau2.md  terminalbench_hard.md  τ-bench.md
src/content/benchmarks/: aime_25.json  artificial_analysis_coding_index.json  artificial_analysis_intelligence_index.json  gpqa.json  hle.json  ifbench.json  lcr.json  livecodebench.json  math_500.json  mmlu.json  mmlu_pro.json  scicode.json  swe_bash_only.json  tau2.json  terminalbench_hard.json  τ-bench.json
src/content/publishers/: ai2.json  ai21-labs.json  alibaba.json  anthropic.json  aws.json  (+37 more)
src/layout/: layout.astro
src/pages/: compare.astro  index.astro
src/styles/: global.css
src/utils/: analytics.ts
(+411 files in other folders)
